- turn off detection of definitional constraints in CONOPT for now, to work around a related issue in CONOPT 4.39.0
- signal extreme estimations in timeSeriesEstimate() and skip pruning estimations in eventExecEstim() to avoid unstable restarting
- fixed that variable removal in IIS cleanup tried to delete variables that were marked as not deleteable

Miscellaneous
-------------

- updated ampl/mp to version 4.0.4

@section RN1000 SCIP 10.0.0
***************************

Features and Performance Improvements
-------------------------------------

### Exact Solving
- added numerically exact solving mode for mixed-integer linear programs to the core framework including certification of branch-and-bound phase
- core extensions:
  - new wrapper struct SCIP_RATIONAL for rational arithmetic currently based on Boost, GMP, and MPFR
  - new data structure SCIP_LPEXACT for handling rational LP relaxation and computing safe dual bounds
  - new interfaces to exact LP solvers SoPlex and QSopt_ex
  - safe dualproof version of conflict analysis
  - new data structure SCIP_CERTIFICATE for certificate printing/proof logging
- new plugins:
  - new constraint handler "exactlinear" for handling linear constraints with rational data
  - new constraint handler "exactsol" to post-process and repair solutions from floating-point heuristics
- plugins revised for numerically exact solving mode:
  - adjusted readers for MPS, LP, CIP, OPB/WBO, and ZIMPL files
  - extended presolver "milp" to perform rational presolving with PaPILO
  - adjusted constraint handler "integral" and default reliability pseudo-cost branching rule "relpscost"
  - extended Gomory cut separator to separate and certify numerically safe MIR cuts
  - adjusted all primal heuristics (except for five dedicated MINLP heuristics)
- new interfaces to exact LP solvers SoPlex and QSopt_ex

### Symmetry Handling